<resources>
    <string name="app_name">TrafficScotland</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_incidents">Incidents</string>
    <string name="title_roadworks">Roadworks</string>
    <string name="rw_tab_text_1">Tab 1</string>
    <string name="rw_tab_text_2">Tab 2</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="maps_api">AIzaSyArm8SG3N8UO1TRwsH8225-JDyEVTblxwI</string>
</resources>
