<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_twitter"
        android:icon="@drawable/ic_twitter"
        android:title="@string/title_twitter" />

    <item
        android:id="@+id/navigation_incidents"
        android:icon="@drawable/ic_alert"
        android:title="@string/title_incidents" />

    <item
        android:id="@+id/navigation_roadworks"
        android:icon="@drawable/ic_road"
        android:title="@string/title_roadworks" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
